err/ucloudbiz.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ucloudbiz'...
Listing './lib/python3.5/site-packages/ucloudbiz/server'...
Listing './lib/python3.5/site-packages/ucloudbiz/server/address'...
Listing './lib/python3.5/site-packages/ucloudbiz/server/lib'...
Compiling './lib/python3.5/site-packages/ucloudbiz/server/lib/api.py'...
***   File "./lib/python3.5/site-packages/ucloudbiz/server/lib/api.py", line 23
    print "Parameter List"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ucloudbiz/server/portforwarding'...
Listing './lib/python3.5/site-packages/ucloudbiz/server/template'...
Listing './lib/python3.5/site-packages/ucloudbiz/server/vm'...
Listing './lib/python3.5/site-packages/ucloudbiz/server/volume'...
Listing './lib/python3.5/site-packages/ucloudbiz-0.3.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
